3.4.0/docs/tutorials/angular-components/index.md
# Angular Components Tutorials

Angular Components

In the following tutorials you can learn how to use each one of the available [Angular Components](https://openvidu.io/3.4.0/docs/ui-components/angular-components/index.md) to build your application UI tailored to your needs:

- [**Custom UI**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-custom-ui/index.md): learn how to customize the UI, changing colors, shapes and add your branding logo.
- [**Custom toolbar**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-custom-toolbar/index.md): learn how to replace the default toolbar with your own.
- [**Toolbar buttons**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-toolbar-buttons/index.md): learn how to add custom buttons to the toolbar.
- [**Toolbar panel buttons**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-toolbar-panel-buttons/index.md): learn how to add custom panel buttons to the toolbar.
- [**Custom layout**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-custom-layout/index.md): learn how to replace the default layout with your own.
- [**Custom stream**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-custom-stream/index.md): learn how to replace the default stream with your own.
- [**Custom panels**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-custom-panels/index.md): learn how to replace the default panels with your own.
- [**Additional panel**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-additional-panels/index.md): learn how to add a new extra panel besides the default ones.
- [**Custom chat panel**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-custom-chat-panel/index.md): learn how to replace the default chat panel with your own.
- [**Custom activities panel**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-custom-activities-panel/index.md): learn how to replace the default activities panel with your own.
- [**Custom participants panel**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-custom-participants-panel/index.md): learn how to replace the default participants panel with your own.
- [**Custom participant panel item**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-custom-participant-panel-item/index.md): learn how to replace the default participants panel item with your own.
- [**Custom participant panel item element**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-custom-participant-panel-item-element/index.md): learn how to replace the default participant panel item element with your own.
- [**Toggle hand**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-toggle-hand/index.md): learn how to add extra features to the videoconference.
- [**Admin dashboard**](https://openvidu.io/3.4.0/docs/tutorials/angular-components/openvidu-admin-dashboard/index.md): learn how to add an admin dashboard to the videoconference.
